--- a/frontend/src/css/Footer.css
+++ b/frontend/src/css/Footer.css
@@ -1,4 +1,3 @@
-/* Footer.css */
 .footer {
     background-color: #535151;
     color: white;
@@ -14,7 +13,7 @@
   
   .teamName{
     font-size: 24px;
-    color: #0099ff;
+    color: #32a8f7;
     font-weight: bold;
   }
   .footer p {
