--- a/frontend/src/css/HomePage.css
+++ b/frontend/src/css/HomePage.css
@@ -1,9 +1,8 @@
-/* HomePage.css */
 .homepage {
     background-color: #f8f9fa;
     color: #333;
     /* text-align: center; */
-    padding: 50px 20px;
+    padding: 30px 20px;
   }
   
   .welcome-text,
@@ -16,6 +15,8 @@
   .gcr-line {
     font-size: 36px;
     font-weight: bold;
+    margin-top: -9px;
+    margin-bottom: 40px;
     /* margin: 20px 0; */
     /* text-transform: uppercase; */
     color: #333;
@@ -26,17 +27,18 @@
   .gcr-text {
     font-size: 48px;
     font-weight: bold;
+    margin-left: 5px;
     padding: 5px 15px;
     border-radius: 25px;
     color: #fff;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff007f, 0 0 30px #ff007f,
-      0 0 40px #ff007f;
-    transition: background-color 0.25s ease-in-out, transform 0.2s ease-in-out;
+      0 0 40px #ff0080;
+    /* transition: background-color 0.25s ease-in-out, transform 0.2s ease-in-out; */
     animation: neon-flicker 1.5s infinite alternate;
   }
   
   .gcr-text:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
   }
   
   /* Neon Flicker Effect */
@@ -76,6 +78,7 @@
     text-align: center;
     background-color: white;
     padding: 10px;
+    cursor: pointer;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
@@ -91,7 +94,7 @@
   .subcategory-item p {
     margin-top: 10px;
     font-size: 18px;
-    color: #005c99;
+    color: #000000;
     font-weight: bold;
   }
   
