--- a/frontend/src/css/SearchResultsPage.css
+++ b/frontend/src/css/SearchResultsPage.css
@@ -1,6 +1,3 @@
-/* SearchResultsPage.css */
-
-/* Main Container */
 .search-results-page {
     padding: 20px;
     background-color: #f9f9f9;
@@ -52,7 +49,7 @@
   .product-image {
     width: 100%;
     height: 180px;
-    /* object-fit: cover; */
+    padding: 7px;
     object-fit: contain;
     border-bottom: 1px solid #ddd;
 
@@ -63,7 +60,7 @@
     font-size: 16px;
     font-weight: bold;
     margin: 10px 0;
-    color: #005c99;
+    color: #000000;
   }
   
   /* Responsive Design */
