--- a/frontend/src/css/HomePage.css
+++ b/frontend/src/css/HomePage.css
@@ -7,12 +7,14 @@
   
   .welcome-text,
   .explore-text {
+    padding-left: 50px;
     font-size: 36px;
     font-weight: bold;
     /* margin: 10px 0; */
   }
   
   .gcr-line {
+    padding-left: 50px;
     font-size: 36px;
     font-weight: bold;
     margin-top: -9px;
