--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -23,8 +23,8 @@
   cursor: pointer;
 }
 .logo2 {
-  width: 120px;
-  height: 60px;
+  /* width: 120px; */
+  height: 55px;
   /* cursor: pointer; */
 }
 
